<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="tech.zettervall.notes.NoteActivity">

                <!-- Title -->
                <EditText
                    android:id="@+id/fragment_note_title_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/hint_title"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_note_photo_layout" />

                <!-- Photo Layout -->
                <RelativeLayout
                    android:id="@+id/fragment_note_photo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <!-- Photo -->
                    <ImageView
                        android:id="@+id/fragment_note_photo_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxHeight="300dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/photo" />

                    <!-- Remove Photo Button -->
                    <ImageView
                        android:id="@+id/fragment_note_remove_photo_imageview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:padding="8dp"
                        android:elevation="4dp"
                        android:src="@drawable/ic_clear"
                        android:background="@drawable/circle_pink"
                        android:contentDescription="@string/cont_photo_delete"/>

                </RelativeLayout>

                <!-- Text -->
                <EditText
                    android:id="@+id/fragment_note_text_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_text"
                    android:inputType="textMultiLine"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    app:layout_constraintEnd_toEndOf="@+id/fragment_note_title_edittext"
                    app:layout_constraintStart_toStartOf="@+id/fragment_note_title_edittext"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_note_title_edittext" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_note_text_edittext">

                    <!-- Reminder Layout -->
                    <LinearLayout
                        android:id="@+id/fragment_note_reminder_linearlayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <!-- Reminder text -->
                        <TextView
                            android:id="@+id/fragment_note_reminder_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/tools_reminder_set"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textStyle="bold"
                            tools:text="@string/tools_reminder_set" />

                        <!-- Reminder removal -->
                        <Button
                            android:id="@+id/fragment_note_reminder_remove_button"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:text="@string/remove" />

                    </LinearLayout>

                    <!-- Tags -->
                    <TextView
                        android:id="@+id/fragment_note_tags_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:visibility="gone"
                        tools:text="@string/tools_tags"
                        tools:visibility="visible" />

                    <!-- Creation Layout -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Last updated -->
                        <TextView
                            android:id="@+id/fragment_note_updated_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/tools_date_updated" />

                        <!-- Creation date -->
                        <TextView
                            android:id="@+id/fragment_note_created_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/tools_date_created" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <!-- FAB (Only visible in Tablet) -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_note_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/cont_save_note"
            app:srcCompat="@drawable/ic_save" />

    </RelativeLayout>

</layout>