...
    android:id="@+id/fragment_notelist_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_notelist_recyclerview"
        style="@style/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_notelist_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/cont_new_note"
        app:srcCompat="@drawable/ic_add"
...
