...
    <!-- Menu -->
    <string name="action_all_notes">All Notes</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_reminders">Reminders</string>
    <string name="action_reminder">Reminder</string>
    <string name="action_tags">Tags</string>
    <string name="action_trash">Trash</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_restore">Restore</string>
    <string name="action_favoritize">Favoritize</string>
    <string name="action_unfavoritize">Unfavoritize</string>
    <string name="action_empty_trash">Empty trash</string>
...
    <string name="tools_date_updated" translatable="false">Updated: May 1, 11:55</string>
    <string name="tools_reminder_set" translatable="false">Reminder set for May 5, 12:00</string>
    <string name="tools_tags" translatable="false">#Personal #Work #Other #Exercise</string>
    <string name="tools_tag" translatable="false">#This is a tag</string>

    <!-- Content Descriptions -->
    <string name="cont_nav_drawer_open">Open navigation drawer</string>
    <string name="cont_nav_drawer_close">Close navigation drawer</string>
    <string name="cont_new_note">Add new note</string>
    <string name="cont_save_note">Save note</string>
    <string name="cont_new_tag">Add new tag</string>
    <string name="cont_favorite">Favorite</string>
    <string name="cont_reminder">Reminder</string>
...
    <string name="cont_photo_take">Take photo</string>
    <string name="cont_photo_delete">Delete photo</string>
    <string name="cont_photo">Note photo</string>
    <string name="cont_counter">Counter</string>

    <!-- Pre defined Tags -->
    <string name="tag_personal">Personal</string>
    <string name="tag_work">Work</string>

    <!-- Preference Titles -->
    <string name="theme">Theme</string>
    <string name="data">Data</string>

    <!-- Preferences -->
...
