<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- All Notes -->
    <item
        android:id="@+id/nav_all_notes"
        android:icon="@drawable/ic_note"
        android:title="@string/action_all_notes"
        android:checkable="true"
        app:actionLayout="@layout/nav_view_counter" />

    <!-- Favorites -->
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_star"
        android:title="@string/action_favorites"
        android:checkable="true"
        app:actionLayout="@layout/nav_view_counter" />

    <!-- Reminders -->
    <item
        android:id="@+id/nav_reminders"
        android:icon="@drawable/ic_reminder"
        android:title="@string/action_reminders"
        android:checkable="true"
        app:actionLayout="@layout/nav_view_counter" />

    <!-- Tags (Header + SubMenu) -->
    <item
        android:id="@+id/nav_tags_header"
        android:title="@string/action_tags"
        android:checkable="false">
        <menu />
    </item>

    <!-- Tags -->
    <item
        android:id="@+id/nav_tags"
        android:icon="@drawable/ic_tag"
        android:title="@string/action_tags"
        android:checkable="true" />

    <!-- Trash -->
    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_trash"
        android:title="@string/action_trash"
        android:checkable="true" />

    <!-- Settings -->
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        android:checkable="false" />

    <!-- Rate -->
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_star"
        android:title="@string/action_rate"
        android:checkable="false" />

</menu>